# coinrun-gymnasium

./: Dockerfile  README.md  pyproject.toml  setup.py
coinrun/: Makefile  __init__.py  coinrunenv.py  config.py  enjoy.py  random_agent.py  setup_utils.py  train_agent.py
